--- a/lib/pages/home/home.pug
+++ b/lib/pages/home/home.pug
@@ -1,27 +1,49 @@
 import(package='flutter_platform_widgets/flutter_platform_widgets.dart')
 import(package='scoped_model/scoped_model.dart')
 import(package='tester/app-model.dart')
+import(package='tester/util/controller_widget.dart')
 
 home-page(flutter-view model='AppModel')
 	material-app(title='Flutter Demo!')
-		scoped(as='home' model='AppModel')
-			scaffold
-				app-bar(as='appBar')
-					#title(as='title') Welcome
-				center(as='body')
+		scaffold(as='home')
+			app-bar(as='appBar')
+				#title(as='title') Welcome
+			center(as='body')
+				scoped(model='AppModel')
 					column
-						.message You have pushed:
-						.counter ${model.counter} times
-						anim-controller(duration=200 auto-start=true :on-create='model.startAnim')
-							function(as='builder')
+						animated-switcher(:duration='Duration(milliseconds:100)')
+							.switched(:key='ValueKey(model.counter)')
+								.message You have pushed:
+								.counter ${model.counter} times!
+
+						animated-cross-fade(
+							:duration='Duration(seconds:1)'
+							:cross-fade-state='model.getFadeState()')
+							text(as='firstChild' value='Hello!')
+							text(as='secondChild' value='Hello Again!')
+
+						animated-container(
+							:duration='Duration(seconds:1)'
+							:curve='Curves.easeIn').animated
+							column
+								| Just some text here
+
+						//- anim-controller(:duration=1000 :on-created='model.onAnimCreated')
+						//- 	function(as='builder' params='controller, child')
+						//- 		.values
+						//- 			| Height value: ${animate(controller, begin:1.0, end:50.0, curve: Curves.ease)}
+						anim-controller(:duration=1000 :on-created='model.onAnimCreated')
+							function(as='builder' params='controller, child')
+								column
+									.values 
+										| animated: ${animate(controller, begin:1.0, end:10.0, curve: Curves.ease)}
+									slot(:value='child')
+							slot(as='child')
+								| This part is not animated		
 
 
-						//- animated-builder
-						//- 	anim-controller(as='animation' duration=200 auto-start=true :on-create='model.startAnim')
-								//- animation(as='animation' :tween='Tween(begin: 0.0, end: 300.0)')
-
-				floating-action-button(
-					as='floatingActionButton'
-					tooltip='Increment'
-					@on-pressed='model.incrementCounter()')
-					icon(:value='Icons.add')
+			floating-action-button#btn(
+				as='floatingActionButton'
+				tooltip='Increment'
+				@on-pressed='model.incrementCounter()')
+				icon(:value='Icons.add')
