--- a/lib/pages/home/home.pug
+++ b/lib/pages/home/home.pug
@@ -2,21 +2,20 @@ import(package='flutter_platform_widgets/flutter_platform_widgets.dart')
 import(package='scoped_model/scoped_model.dart')
 import(package='tester/app-model.dart')
 import(package='tester/util/controller_widget.dart')
+import(package='tester/util/reactive.dart')
 
-home-page(flutter-view model='AppModel')
+home-page(flutter-view :app)
 	material-app(title='Flutter Demo!')
 		scaffold(as='home')
 			app-bar(as='appBar')
 				#title(as='title') Welcome
 			center(as='body')
-				scoped(model='AppModel')
+				reactive(:model='app')
 					.message You have pushed:
-					animated-switcher(:duration-ms=500)
-						.switched(:key='ValueKey(model.counter)')
-							.counter ${model.counter} times!
+						.counter ${model.counter} times!
 
 			floating-action-button#btn(
 				as='floatingActionButton'
 				tooltip='Increment'
-				@on-pressed='model.incrementCounter()')
+				@on-pressed='app.incrementCounter()')
 				icon(:value='Icons.add')
