--- a/lib/pages/animations/animations.pug
+++ b/lib/pages/animations/animations.pug
@@ -2,14 +2,15 @@ import(package='flutter_platform_widgets/flutter_platform_widgets.dart')
 import(package='scoped_model/scoped_model.dart')
 import(package='tester/app-model.dart')
 import(package='tester/util/controller_widget.dart')
+import(package='tester/util/reactive-model.dart')
 
-animations-page(flutter-view model='AppModel')
+animations-page(flutter-view :model)
 	material-app(title='Flutter Demo!')
 		scaffold(as='home')
 			app-bar(as='appBar')
 				#title(as='title') Welcome
 			center(as='body')
-				scoped(model='AppModel')
+				reactive(:model='model')
 					column
 						animated-switcher(:duration-ms=100)
 							.switched(:key='ValueKey(model.counter)')
