--- a/lib/pages/home/home.pug
+++ b/lib/pages/home/home.pug
@@ -4,18 +4,18 @@ import(package='tester/app-model.dart')
 import(package='tester/util/controller_widget.dart')
 import(package='tester/util/reactive-model.dart')
 
-home-page(flutter-view :app)
+home-page(flutter-view :model)
 	material-app(title='Flutter Demo!')
 		scaffold(as='home')
 			app-bar(as='appBar')
 				#title(as='title') Welcome
 			center(as='body')
-				reactive(:model='app')
+				reactive(:model='model')
 					.message You have pushed:
 						.counter ${model.counter} times!
 
 			floating-action-button#btn(
 				as='floatingActionButton'
 				tooltip='Increment'
-				@on-pressed='app.incrementCounter()')
+				@on-pressed='model.incrementCounter()')
 				icon(:value='Icons.add')
