using new flutter-view

--- a/lib/pages/home/home.pug
+++ b/lib/pages/home/home.pug
@@ -12,7 +12,7 @@ home-page(flutter-view :model)
 			center(as='body')
 				reactive(:model='model')
 					.message You have pushed:
-						.counter ${model.counter} times!
+						.counter ${model.counter} times
 
 			floating-action-button#btn(
 				as='floatingActionButton'
