--- a/lib/pages/home/home.sass
+++ b/lib/pages/home/home.sass
@@ -1,6 +1,26 @@
-.message
-	margin-top: 100
+home-page
+	.empty-message
+		font-size: theme(text-theme/title/font-size)
 
-.counter
-	margin-top: 30
-	font-size: 25
+
+task-entry
+	card
+		row
+			main-axis-alignment: space-between
+			.title
+				margin-left: 20
+				font-size: theme(text-theme/title/font-size)
+			.checkbox
+				margin-right: 20
+	.dismiss
+		background-color: red
+		color: white
+		font-size: theme(text-theme/title/font-size)
+		alignment: center-right
+		padding-right: 20
+
+	
+add-task-dialog
+	button
+		text-color: white
+		color: theme(primary-color)
