--- a/lib/pages/home/home.sass
+++ b/lib/pages/home/home.sass
@@ -10,8 +10,8 @@ task-entry
 			.title
 				margin-left: 20
 				font-size: theme(text-theme/title/font-size)
-			.checkbox
-				margin-right: 20
+			.isdone
+				margin-right: 0
 	.dismiss
 		background-color: red
 		color: white
@@ -22,5 +22,4 @@ task-entry
 	
 add-task-dialog
 	button
-		text-color: white
 		color: theme(primary-color)
